--- a/less/mixins.less
+++ b/less/mixins.less
@@ -10,18 +10,19 @@
 .container() {
   width: 320px;
   margin: 0 auto;
-
-  @media @tablet-widths {
-    width: 640px;
   }
 
-  @media @desktop-widths {
-    width: 960px;
-  }
+.font-bold (@font-size; @line-height) {
+  font-style: normal ;
+  font-weight: bold;
+  font-size: @font-size;
+  line-height: @line-height;
 }
 
-.font-title {
-    font-size: 60px;
-    line-weight: 30px;
-    text-align: center;
+.font-normal (@font-size; @line-height) {
+  font-style: normal ;
+  font-weight: normal;
+  font-size: @font-size;
+  line-height: @line-height;
 }
+
