--- a/less/variables.less
+++ b/less/variables.less
@@ -1,8 +1,16 @@
 @bg-white: #ffffff;
-@bg-lightgrey: #f1f1f1;
+@color-lightgrey: #f1f1f1;
+@color-darkgrey: #444444;
 @color-lightgreen: #63d1bb;
 @color-darkgreen: #56c3b2;
+@fonts-page: "Open Sans", sans-serif;
+
+
+
+
 
 @tablet-widths: ~"(min-width: 768px)";
 @desktop-widths: ~"(min-width: 1150px)";
+
+
 
