--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -4,3 +4,8 @@ body {
   font-family: Open Sans, sans-serif;
 }
 
+body {
+  background-color: @bg-white;
+  font-family: @fonts-page;
+   .container();
+}
