--- a/less/index-blocks/advantages.less
+++ b/less/index-blocks/advantages.less
@@ -1,42 +1,35 @@
-/* Файл blocks/advantages.less */
+/* Файл index-blocks/advantages.less */
 
-.advantages__items  {
-    margin: 0;
-    padding: 0;
+.advantages__items {
+  margin: 0;
+  padding: 0;
 
-
-    .font-bold (17px; auto);
-    }
-
-  &__item {
-    padding: 50px 0 20px 0;
-    list-style: none;
-    display: block;
-    }
+  font-size: 17px;
+  font-style: normal;    list-style-type: none;
 }
 
-.item {
-  &__1 {
+.advantages__item {
+  padding: 50px 0 20px 0;
+  &--1 {
     background: url(../img/icon-feature-1.svg) no-repeat;
-    }
-
-  &__2 {
+  }
+  &--2 {
     background: url(../img/icon-feature-2.svg) no-repeat;
-    }
+  }
 
-  &__3 {
+  &--3 {
     background: url(../img/icon-feature-3.svg) no-repeat;
-    }
+  }
 
-  &__4 {
+  &--4 {
     background: url(../img/icon-feature-4.svg) no-repeat;
-    }
+  }
 
-  &__5 {
+  &--5 {
     background: url(../img/icon-feature-5.svg) no-repeat;
-    }
+  }
 
-  &__6 {
+  &--6 {
     background: url(../img/icon-feature-6.svg) no-repeat;
-    }
+  }
 }
