--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -1,11 +1,28 @@
 /* Файл scaffolding.less */
 
-body {
-  font-family: Open Sans, sans-serif;
-}
 
 body {
   background-color: @bg-white;
-  font-family: @fonts-page;
-   .container();
+  font-family: 'Open Sans', sans-serif;
+  width: 320px;
+  margin: 0 auto;
 }
+
+@font-face {
+  font-weight: normal;
+  font-family: "Open Sans";
+  font-style: normal;
+
+  src: url("fonts/opensans.woff2") format("woff2"),
+  url("fonts/opensans.woff") format("woff");
+}
+
+@font-face {
+  font-weight: 700;
+  font-family: "Open Sans";
+  font-style: normal;
+
+  src: url("fonts/opensansbold.woff2") format("woff2"),
+  url("fonts/opensansbold.woff") format("woff");
+}
+
