--- a/less/style.less
+++ b/less/style.less
@@ -3,8 +3,15 @@
 @import url("../less/scaffolding.less");
 @import url("../less/mixins.less");
 
-@import url("../less/blocks/page-header.less");
-@import url("../less/blocks/main-nav.less");
-@import url("../less/blocks/features.less");
+@import url("../less/index-blocks/page-header.less");
+@import url("../less/index-blocks/main-nav.less");
+@import url("../less/index-blocks/headline-item.less");
+@import url("../less/index-blocks/features.less");
+@import url("../less/index-blocks/advantages.less");
+@import url("../less/index-blocks/reviews.less");
+@import url("../less/index-blocks/contact-form.less");
+@import url("../less/index-blocks/page-footer.less");
 
-
+@import url("../less/form-bloсks/form-page-header.less");
+@import url("../less/form-bloсks/filter.less");
+@import url("../less/form-bloсks/contactform.less");
