--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,4 +1,4 @@
-  .clearfix() {
+.clearfix() {
   &::after {
     content: "";
 
@@ -7,22 +7,30 @@
   }
 }
 
+.font-bold(@font-size, @line-height) {
+  font-family: "Open Sans", "Arial", "sans-serif";
+  font-weight: bold;
+  font-style: normal;
+  font-size: @font-size;
+  line-height: @line-height;
+}
+
+.font-normal(@font-size, @line-height) {
+  font-family: "Open Sans", "Arial", "sans-serif";
+  font-weight: normal;
+  font-style: normal;
+  font-size: @font-size;
+  line-height: @line-height;
+}
+
 .container() {
   width: 320px;
   margin: 0 auto;
+  @media @tablet-widths {
+    width: 640px;
   }
 
-.font-bold (@font-size; @line-height) {
-  font-style: normal ;
-  font-weight: bold;
-  font-size: @font-size;
-  line-height: @line-height;
+  @media @desktop-widths {
+    width: 960px;
+  }
 }
-
-.font-normal (@font-size; @line-height) {
-  font-style: normal ;
-  font-weight: normal;
-  font-size: @font-size;
-  line-height: @line-height;
-}
-
