--- a/less/variables.less
+++ b/less/variables.less
@@ -3,14 +3,7 @@
 @color-darkgrey: #444444;
 @color-lightgreen: #63d1bb;
 @color-darkgreen: #56c3b2;
-@fonts-page: "Open Sans", sans-serif;
 
-
-
-
-
+@mobile-widths-only: ~"(max-width: 767px)";
 @tablet-widths: ~"(min-width: 768px)";
-@desktop-widths: ~"(min-width: 1150px)";
-
-
-
+@desktop-widths: ~"(min-width: 1200px)";
