--- a/less/style.less
+++ b/less/style.less
@@ -12,6 +12,6 @@
 @import url("../less/index-blocks/contact-form.less");
 @import url("../less/index-blocks/page-footer.less");
 
-@import url("../less/form-bloсks/form-page-header.less");
-@import url("../less/form-bloсks/filter.less");
-@import url("../less/form-bloсks/contactform.less");
+@import url("../less/form-blocks/form-page-header.less");
+@import url("../less/form-blocks/filter.less");
+@import url("../less/form-blocks/contactform.less");
