--- a/less/style.less
+++ b/less/style.less
@@ -15,3 +15,7 @@
 @import url("../less/form-blocks/form-page-header.less");
 @import url("../less/form-blocks/filter.less");
 @import url("../less/form-blocks/contactform.less");
+
+@import url("../less/catalog-blocks/catalog-page-header.less");
+@import url("../less/catalog-blocks/item-blocks-wrapper.less");
+@import url("../less/catalog-blocks/videocontent.less");
