--- a/less/variables.less
+++ b/less/variables.less
@@ -3,6 +3,9 @@
 @color-darkgrey: #444444;
 @color-lightgreen: #63d1bb;
 @color-darkgreen: #56c3b2;
+@border: #cccccc;
+@bg-image: #f9f9f9;
+
 
 @mobile-widths-only: ~"(max-width: 767px)";
 @tablet-widths: ~"(min-width: 768px)";
