--- a/less/index-blocks/features.less
+++ b/less/index-blocks/features.less
@@ -1,20 +1,22 @@
 /* Файл index-blocks/features.less */
+ .content__wrapper{
+  .container();
+}
+
 
 .features__header {
-  background: @color-lightgrey url(../img/hero-mobile@1x.jpg) no-repeat 50% 0;
+  background: @bg-image url(../img/hero-mobile@1x.jpg) no-repeat 50% 0;
   min-width: 100%;
-  min-height: 355px;
-  text-align: center;
+  height: 358px;
+  background-size: cover;
 }
 
 .features-title {
-
+  padding-top: 87px;
   text-align: center;
-
-  margin:0;
+  margin:0 66px;
 }
 
-.headline-item__title,
 .advantages__title,
 .reviews__title {
  font-size: 25px;
@@ -25,43 +27,94 @@
 
 .feature-items {
   list-style: none;
-
-  display: block;
-
   font-size: 19px;
   line-height: 24px;
-
-
-
   padding: 0;
-  margin: 0;
+  margin-top: -55px;
 }
 
-.feature-items a {
+.feature-item a {
   color:#ffffff;
   text-decoration: none;
-
+  margin-left: 30px;
+  padding-right: 135px;
 }
 
-.feature-item__wrapper--top {
+.feature-item--top {
   background: @color-lightgreen;
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 105px;
 
-  padding-top: 30px;
-  padding-bottom: 35px;
-
-  &:hover {
-    height: 108px;
-  }
-
-  &:active {
-    opacity: 0.3;
+  &::after {
+    position: absolute;
+    content: "";
+    width: 50px;
+    height: 65px;
+    top: 23px;
+    right: 25px;
+    background-image: url(../img/icon-interior.svg);
+    background-repeat: no-repeat;
+    opacity: 0.2;
   }
 }
-
-.feature-item__wrapper--bottom {
+.feature-item--bottom {
   background: @color-darkgreen;
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 105px;
 
-  padding-top: 30px;
-  padding-bottom: 35px;
+  &::after {
+    position: absolute;
+    content: "";
+    width: 69px;
+    height: 65px;
+    top: 23px;
+    right: 25px;
+    background-image: url(../img/icon-toy.svg);
+    background-repeat: no-repeat;
+    opacity: 0.2;
+  }
 }
+
+/* Планшетная версия */
+@media @tablet-widths {
+  .content__wrapper {
+  .container-fluid();
+  }
+
+.features__header {
+  .container-fluid();
+  height: 732px;
+  background-size: cover;
+}
+
+.features-title {
+  display: block;
+  font-size: 43px;
+  line-height: 50px;
+  padding-top: 157px;
+}
+
+.feature-items {
+  display: flex;
+  flex-direction:row;
+  justify-content: space-around;
+  margin:0 50px;
+  margin-top: -120px;
+}
+
+.feature-item--top {
+  flex-grow: 1;
+  height: 120px;
+}
+
+.feature-item--bottom {
+   flex-grow: 2;
+   height: 120px;
+}
+}
+
 
