--- a/less/mixins.less
+++ b/less/mixins.less
@@ -23,9 +23,11 @@
   line-height: @line-height;
 }
 
+
 .container() {
   width: 320px;
   margin: 0 auto;
+
   @media @tablet-widths {
     width: 640px;
   }
@@ -33,4 +35,15 @@
   @media @desktop-widths {
     width: 960px;
   }
+}
+
+.container-fluid () {
+  width: auto;
+
+  @media @tablet-widths {
+    width: 86%;        /* 640px / 768px ~= 84% */
+    max-width: 960px;  /* 960px / .84 ~= 1142px (центровка начнётся чуть раньше 1200px) */
+    margin: 0 auto;
+  }
+
 }
