--- a/less/index-blocks/page-header.less
+++ b/less/index-blocks/page-header.less
@@ -3,10 +3,8 @@
 .page-header {
   .container();
 }
-
-// @media @tablet-widths {
-//  .page-header {
-//   justify-content: flex-start;
-// }
-// }
-
+@media @tablet-widths {
+  .page-header {
+    .container-fluid();
+  }
+}
