--- a/less/catalog-blocks/catalog-page-header.less
+++ b/less/catalog-blocks/catalog-page-header.less
@@ -1,5 +1,5 @@
 /* Файл ../less/catalog-blocks/catalog-page-header.less*/
-
+.page-header,
 .catalog-page {
   .container();
 }
@@ -9,11 +9,13 @@
 }
 
 .catalog-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-width: 100%;
   min-height: 177px;
-  background-color: #f1f1f1;
-  text-align: center;
-  margin: 0;
+  background-color:@color-lightgrey;
+  margin:0;
   font-size: 27px;
   line-height: 30px;
   font-weight: 700;
@@ -23,17 +25,29 @@
 
 @media @tablet-widths {
   .catalog-page {
-   .container-fluid();
- }
+    .container();
+  }
 
- .catalog-page__wrapper {
-  margin: 0 50px
+  .catalog-page__wrapper {
+    .wrapper();
+    margin: 0;
+  }
+
+  .catalog-title {
+    min-height: 227px;
+    font-size: 43px;
+    line-height: 50px;
+  }
+
 }
 
-.catalog-title {
-  min-height: 227px;
-  font-size: 43px;
-  line-height: 50px;
-}
+@media @desktop-widths {
 
+  .catalog-title {
+    min-height: 260px;
+    font-size: 53px;
+    line-height: 57px;
+
+    margin-bottom: 127px;
+  }
 }
