--- a/less/index-blocks/page-footer.less
+++ b/less/index-blocks/page-footer.less
@@ -1,5 +1,5 @@
 /* Файл index-blocks/page-footer.less */
-.page-footer {
+.page-footer__wrapper {
   min-height: 160px;
   background-color: #f1f1f1;
 }
@@ -40,7 +40,7 @@
 @media @tablet-widths {
 
   .page-footer__wrapper {
-    .container-fluid();
+
     min-height: 143px;
     display: flex;
     justify-content: space-between;
