--- a/less/variables.less
+++ b/less/variables.less
@@ -4,7 +4,7 @@
 @color-lightgreen: #63d1bb;
 @color-darkgreen: #56c3b2;
 @border: #cccccc;
-@bg-image: #f9f9f9;
+@bg-image: #ececec;
 
 
 @mobile-widths-only: ~"(max-width: 767px)";
