--- a/less/catalog-blocks/item-blocks-wrapper.less
+++ b/less/catalog-blocks/item-blocks-wrapper.less
@@ -10,28 +10,30 @@
   display: flex;
   flex-direction: column;
   margin-top: 34px;
-  border: 2px solid #f9f9f9;
+  border: 1px solid @bg-image;
 }
-.item-block__photo{
+.item-block__photo-item{
   background-image: url(..img/photo-1-mobile@1x.jpg);
-  min-width: 258px;
-  min-height: 235px;
+  width: 260px;
+  height: 195px;
 }
 
-.item-block__info {
-  margin-top: 30px;
-  margin: 30px 30px 0 30px;
+.item-block__info  {
+    margin-top: 30px;
+    margin: 30px 30px -25px 30px;
+    border-bottom: 1px solid @bg-image;
 
-  &--title {
+ .item-block__info-description  {
     font-size: 17px;
     line-height: 24px;
     font-weight: 700;
     color: #333333;
   }
-  &--description {
+  .item-block__info-description {
     font-size: 13px;
     line-height: 30px;
     font-weight: 400;
+    padding-bottom: 10px;
     color: @color-darkgrey;
   }
 }
@@ -41,10 +43,8 @@
   font-size: 17px;
   line-height: 24px;
   font-weight: 700;
-  margin: 30px 30px 0 30px;
-  border-top: 1px solid #f9f9f9;
-  padding-bottom: 20px;
-}
+  margin: 15px 30px 0 30px;
+  }
 
 .price{
   display: block;
@@ -52,9 +52,9 @@
   padding-bottom: 21px;
 }
 .price::after {
-  display:block;
+  display: block;
   content: "";
-  background: #f1f1f1 url(..img/icon-cart.svg) no-repeat;
+  background: @color-lightgrey url(..img/icon-cart.svg) no-repeat;
 }
 
 
@@ -66,21 +66,62 @@
     margin-bottom: 50px;
   }
 
-  .item-block__photo {
+  .item-block__photo-item{
     min-width: 334px;
     height: 320px;
-    background-image: url(..img/photo-1-mobile@1x.jpg);
-    background-size: cover;
-  }
+    background: @color-lightgrey url(..img/photo-1-mobile@1x.jpg) no-repeat;
+    }
 
   .item-block__body {
     display: flex;
     flex-wrap: wrap;
     margin-left: 29px;
   }
-
+.item-block__info {
+  margin: 30px 30px -113px 30px;
+    border-bottom: 1px solid #ececec;
+}
   .item-price {
     display: flex;
     align-self: flex-end;
   }
+}
+
+
+
+@media @desktop-widths {
+
+.item-blocks__wrapper {
+      display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+  .item-block {
+    width: 316px;
+    height: 660px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .item-block__photo-item{
+  background: @color-lightgrey url(..img/photo-1-mobile@1x.jpg) no-repeat;
+  min-width: 316px;
+  height: 465px;
+}
+
+.item-block__info {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+}
+
+.item-block__info-title {
+  margin-bottom: 0;
+}
+.item-block__info-description {
+  margin: 0;
+}
 }
