--- a/less/index-blocks/advantages.less
+++ b/less/index-blocks/advantages.less
@@ -1,7 +1,8 @@
 /* Файл index-blocks/advantages.less */
-.advantages{
+.advantages__wrapper{
  margin: 0 30px;
 }
+
 .advantages__title,
 .reviews__title {
  font-size: 25px;
@@ -9,6 +10,7 @@
  font-weight: bold;
  font-style: normal;
 }
+
 .advantages__column {
   margin: 0;
   padding: 0;
@@ -48,19 +50,20 @@
 /* Планшетная версия */
 
 @media @tablet-widths {
-  .advantages{
-   margin: 0;
+  .advantages__wrapper{
+     .wrapper ();
+  margin: 0;
  }
+
+ .advantages__list{
+  display: flex;
+  align-content: center;
+ }
+
  .advantages__title {
-  display: block;
   font-size: 43px;
   line-height: 50px;
   padding-top: 54px;
-}
-
-.advantages__wrapper {
-  display: flex;
-  align-content: center;
 }
 
 .advantages__item {
@@ -69,12 +72,23 @@
   font-weight: bold;
   height: 110px;
 }
-.advantages__column{
 
-}
 .advantages__column--right{
   margin-right: 50px;
 
 }
 
+}
+
+@media @desktop-widths {
+  .advantages__wrapper {
+margin: 0 175px;
+}
+
+
+
+ .advantages__title {
+    font-size: 53px;
+    line-height: 57px;
+  }
 }
