--- a/less/index-blocks/contacts.less
+++ b/less/index-blocks/contacts.less
@@ -1,13 +1,11 @@
 /* Файл index-blocks/contact-form.less */
-.contacts {
-  .container();
-}
+
 .contacts__wrapper {
   margin: 0 30px;
 }
 .contacts__title {
   font-size: 18px;
-  line-height:30px;
+  line-height: 30px;
   font-weight: 700;
 }
 
@@ -16,7 +14,7 @@
   display: flex;
   align-items: baseline;
   font-size: 15px;
-  line-height:30px;
+  line-height: 30px;
 }
 .contacts__email p {
   padding-right: 20px;
@@ -39,50 +37,14 @@
 }
 }
 
-
-
-
-
-@media @tablet-widths {
-  .contacts{
-    .container-fluid();
-
-  }
-
-  .contacts__wrapper {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: baseline;
-    margin: 0;
-  }
-  .contacts__block{
-    display: flex;
-    justify-content: space-between;
-
-  }
-  .contacts__email {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: baseline;
-  }
-
-  .contacts__adress {
-    display: flex;
-
-    align-items: baseline;
-    margin-left: 150px;
-  }
-}
-
-/*Кнопка Напишите нам*/
-.contact__button {
+.contacts__button {
   width: 258px;
   height: 52px;
+  margin: 30px auto;
+
 }
 
-.contact__button input[type=submit] {
+.contacts__button input[type=submit] {
   font-size: 18px;
   line-height: 16px;
   font-weight: 700;
@@ -90,20 +52,95 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
-
-  margin-bottom: 50px;
 }
 
-/*Map*/
 .map {
-  .container-fluid();
+
   background: url(../img/map-mobile@1x.jpg) no-repeat;
-  min-width: 100%;
-  min-height: 458px;
+  width: 100%;
+  height: 458px;
+  margin-top: 79px;
 }
 
 iframe {
   width: 100%;
   height: 458px;
+}
+
+
+
+
+
+@media @tablet-widths {
+
+
+  .contacts__wrapper {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: baseline;
+    margin: 60px 50px;
+  }
+
+  .contacts__title {
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  .contacts__block{
+    display:flex;
+  }
+
+  .contacts__email {
+    width: 334px;
+  }
+
+  .contacts__adress {
+   width: 334px;
+ }
+.map {
+   width: 100%;
+   height: 460px;
+   margin: 0;
+ }
+
+}
+
+
+
+@media @desktop-widths {
+
+  .contacts__block {
+    flex-direction: column;
+    display: flex;
+  }
+
+  .contacts__email,
+  .contacts__adress {
+    justify-content: flex-start;
+    margin: 0;
+  }
+
+  .contacts {
+    display: flex;
+    margin: 50px 0 105px 175px;
+    align-items: center;
+  }
+
+  .contacts__title {
+   font-size: 53px;
+   line-height:57px;
+ }
+
+ .map {
+   width: 525px;
+   height: 468px;
+   margin-top: 79px;
+ }
+ .contacts__button {
+  margin-top: -165px;
+  margin-left: 220px;
+  margin-bottom: 105px;
+}
+
 }
