--- a/less/index-blocks/headline-item.less
+++ b/less/index-blocks/headline-item.less
@@ -69,12 +69,9 @@
 .headline-item__button {
   display: flex;
   justify-content: center;
-
-  padding-top: 16px;
-
-  padding-bottom: 16px;
-
-  margin: auto;
+  align-items: center;
+  width: 258px;
+  height: 52px;
   width: 258px;
 }
 
@@ -82,10 +79,11 @@
 
 /* Планшетная версия */
 @media @tablet-widths {
-
-  .headline-item__wrapper{
-    margin: 0 ;
+.headline-item__wrapper {
+   .wrapper ();
+   margin: 0;
   }
+
   .headline-item__header {
     display: flex;
     justify-content: space-between;
@@ -104,11 +102,14 @@
   align-items: center;
   width: 100px;
 }
-.headline-item__blok {
+.headline-item__block {
   display:flex;
   align-items: flex-start;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
+
+
 .headline-options{
   width: 285px;
   padding-right: 45px;
@@ -123,12 +124,12 @@
   line-height: 30px;
   margin: 0;
 }
-.headline-item__foto {
-  background-size: 100%;
+.headline-item__photo {
   min-width: 334px;
   min-height: 405px;
   background-size: cover;
 }
+
 .headline-item__footer{
  display: flex;
  flex-direction: column;
@@ -142,3 +143,53 @@
 }
 
 }
+
+/*Десктопная версия*/
+@media @desktop-widths {
+
+  .headline-item__label {
+    order: -1;
+  }
+  .headline-item__wrapper{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .headline-item__header {
+    flex-wrap: nowrap;
+    position: absolute;
+    z-index:1;
+    margin-top: 67px;
+  }
+
+  .headline-item__title{
+
+   font-size: 53px;
+   line-height:57px;
+   margin-left: 68px;
+ }
+
+ .headline-item__block {
+  justify-content: flex-start;
+  position: relative;
+  align-items: center;
+  margin-top: 70px;
+  margin-left: 175px;
+}
+
+
+.headline-item__photo{
+  min-width: 525px;
+  min-height: 640px;
+}
+
+
+.headline-item__footer {
+  margin-top: -125px
+}
+
+}
+
+
+
+
