--- a/less/mixins.less
+++ b/less/mixins.less
@@ -28,22 +28,15 @@
   margin: 0 auto;
 
   @media @tablet-widths {
-    width: 668px;
-
+    width: 768px;
   }
 
   @media @desktop-widths {
-    width: 1060px;
-
+    width: 1150px;
   }
 }
 
-.container-fluid () {
-  width: auto;
-
-  @media @tablet-widths {
-    width: 87%;        /* 640px / 768px ~= 84% */
-    max-width: 1060px;  /* 960px / .84 ~= 1142px (центровка начнётся чуть раньше 1200px) */
-    margin: 0 auto;
-  }
+.wrapper() {
+    padding: 0 50px;
+    box-sizing: border-box;
 }
